<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.fragment.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_resources"
        style="@style/Button"
        android:text="@string/resources" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_single_selection"
        style="@style/Button"
        android:text="@string/single_selection" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_selective"
        style="@style/Button"
        android:text="@string/selective_selection" />

</LinearLayout>